removed extra margin and fixed code style

--- a/static/blocks/layout/links-section.styl
+++ b/static/blocks/layout/links-section.styl
@@ -2,11 +2,6 @@
 //LINKS
 /////////
 
-.links-wrapper {
-    //@todo: remove later
-    margin-top: 25%;
-}
-
 .links-section {
     display: inline-block;
     vertical-align: top;
